Latest theme update. Header wip.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -33,11 +33,12 @@
     <div id="upper-container">
         <div class="row header">
             <div class="twelve columns header">
+                <div class="two columns main-logo"></div>
                 <div class="four columns main-title">
-                    <h2>Engagemedia</h2>
-                    <p>Subtitle</p>
+                    <h2>EngageMedia</h2>
+                    <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
-                <div class="eight columns menu">
+                <div class="six columns menu">
                     <a href="#" class="header-menu-item">User</a>
                     <a href="#" class="header-menu-item">Publish</a>
                     <a href="#" class="header-menu-item">Browse</a>
@@ -57,8 +58,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row nest">
-                    <div class="six columns">
+                <div class=" ">
+                    <div class="eight columns">
                         <div class="featured-content">
                             <div class="featured-image"></div>
                             <div class="featured-text">
@@ -70,7 +71,7 @@
                         </div>
                     </div>
 
-                    <div class="six columns video">
+                    <div class="four columns video">
                         <div style="width: 430px; height: 190px;background: #111;"></div>
                         <div class="under">
                             <h5>Featured Filmmaker</h5>
