--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -33,8 +33,8 @@
     <div id="upper-container">
         <div class="row header">
             <div class="twelve columns header">
-                <div class="two columns main-logo"></div>
-                <div class="four columns main-title">
+                <div class="one columns main-logo"></div>
+                <div class="five columns main-title">
                     <h2>EngageMedia</h2>
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
@@ -55,10 +55,15 @@
                         <div style="width: 900px; height: 400px;background: #111;"></div>
                         <div class="under">
                             <h3>Video Title</h3>
+                            <div class="video-actions">
+                                <a href="#"><span>View High Quality</span></a>
+                                <a href="#"><span>Download</span></a>
+                                <a href="#"><span>Share</span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class=" ">
+                <div class="row nest">
                     <div class="eight columns">
                         <div class="featured-content">
                             <div class="featured-image"></div>
@@ -97,10 +102,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row content">
-                
-        </div>
-        <div class="row row-title"><h4>Latest</h4></div>
+        <div class="row row-title"><h4>Latest Videos</h4></div>
         <div class="row content">
                 <div class="three columns video">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
@@ -126,8 +128,6 @@
                         <h5>Video Title</h5>
                     </div>
                 </div>
-            </div>
-            <div class="row content">
                 <div class="three columns video">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
@@ -188,6 +188,7 @@
                 <ul>
                     <li>Subscribe to our Newsletter</li>
                     <li>Contact</li>
+                    <li>Donate</li>
                 </ul>
                 <div class="social">
                     <div class="fb"></div>
