--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -33,13 +33,16 @@
     <div id="upper-container">
         <div class="row header">
             <div class="twelve columns header">
-                <div class="one columns main-logo"></div>
-                <div class="five columns main-title">
+                <div class="one column main-logo"></div>
+                <div class="four columns main-title">
                     <h2>EngageMedia</h2>
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
-                <div class="six columns menu">
-                    <a href="#" class="header-menu-item">User</a>
+                <div class="three columns search">
+                    <input type="text" id="search-box" name="search-box" value="Search EnagageMedia">
+                </div>
+                <div class="four columns menu">
+                    <a href="#" class="header-menu-item user">User</a>
                     <a href="#" class="header-menu-item">Publish</a>
                     <a href="#" class="header-menu-item">Browse</a>
                 </div>
