--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div class="row row-title"><h4>Latest Videos</h4></div>
-        <div class="row content">
+        <div class="row content" id="latestvideos">
                 <div class="three columns video">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
