--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -28,6 +28,9 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <style>
+        #portal-advanced-search, #portal-searchbox label, div.searchSection, input.searchButton {display: none}
+    </style>
 </head>
 <body>
     <div id="upper-container">
@@ -200,6 +203,7 @@
             </div>
         </div>
     </div>
-
+    <span id="javascript_at_bottom"></span>      
+    <span id="javascript_inline"></span>
 </body>
 </html>
