Added some real content. Updated header layout a bit.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -34,11 +34,11 @@
         <div class="row header">
             <div class="twelve columns header">
                 <div class="one column main-logo"></div>
-                <div class="four columns main-title">
+                <div class="three columns main-title">
                     <h2>EngageMedia</h2>
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
-                <div class="three columns search">
+                <div class="three columns offset-by-one search">
                     <input type="text" id="search-box" name="search-box" value="Search EnagageMedia">
                 </div>
                 <div class="four columns menu">
@@ -57,7 +57,7 @@
                     <div class="video featured">
                         <div style="width: 900px; height: 400px;background: #111;"></div>
                         <div class="under">
-                            <h3>Video Title</h3>
+                            <h3>Witch Hunt Online</h3>
                             <div class="video-actions">
                                 <a href="#"><span>View High Quality</span></a>
                                 <a href="#"><span>Download</span></a>
@@ -72,8 +72,8 @@
                             <div class="featured-image"></div>
                             <div class="featured-text">
                                 <ul>
-                                    <li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
-                                    <li><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</li>
+                                    <li><a href="http://foundation.zurb.com/docs">
+West Papua: Land Of Mourning, Bloodshed (peace?) And Humanitarian Intervention</a><br />Reverend Benny Giay of the Kingmi Papuan Christian Church presented the following diplomat briefing which reads like an essay on human rights abuses in West Papua. </li>
                                 </ul>
                             </div>
                         </div>
@@ -91,9 +91,9 @@
             <div class="three columns news">
                 <div class="column-title"><h4>News & Events</h4></div>
                 <ul>
-                    <li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
-                    <li><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</li>
-                    <li><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. </li>
+                    <li><a href="#">Competition: Bhinneka Tinggal Duka</a><br />Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</li>
+                                    <li><a href="#">
+Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism And Online Subtitling Workshop In Singapore</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
                 </ul>
                 <div class="column-title"><h4>EngageMedia Blog</h4></div>
                 <ul>
