edit searchbox id instead of name

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -42,7 +42,7 @@
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
                 <div class="three columns search">
-                    <input type="text" id="search-box" name="searchGadget" value="Search EnagageMedia">
+                    <input type="text" id="searchGadget" name="search-box" value="Search EnagageMedia">
                 </div>
                 <div class="four columns menu">
                     <a href="#" class="header-menu-item user">User</a>
