Added newsletter input and button.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -42,7 +42,7 @@
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </div>
                 <div class="three columns offset-by-one search">
-                    <input type="text" id="searchGadget" name="searchGadget" value="Search EnagageMedia">
+                    <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EnagageMedia">
                 </div>
                 <div class="four columns menu">
                     <a href="#" class="header-menu-item user">User</a>
@@ -177,6 +177,7 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
                     <li>Help</li>
                     <li>Support Us</li>
                     <li>Get Involved</li>
+                    <li>Donate</li>
                 </ul>
             </div>
             <div class="three columns">
@@ -190,16 +191,21 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
                 </ul>
             </div>
             <div class="three columns">
-                <h5>Get In Touch</h5>
+                <h5>Stay In Touch</h5>
                 <ul>
-                    <li>Subscribe to our Newsletter</li>
-                    <li>Contact</li>
-                    <li>Donate</li>
+                    <li>
+                        Subscribe to our Newsletter
+                        <form action="" method="post">
+                            <input type="text" id="newsletter-input" class="text-input" name="newsletter-input" value="">
+                            <input type="submit" id="newsletter-submit" class="button small" name="newsletter-submit" value="Go">
+                        </form>
+                    </li>
+                    <li>Contact</li>   
+                    <li>
+                        <div class="fb"></div>
+                        <div class="twitter"></div>
+                    </li>                 
                 </ul>
-                <div class="social">
-                    <div class="fb"></div>
-                    <div class="twitter"></div>
-                </div>
             </div>
         </div>
     </div>
