Added language placeholder, icon remains to be added.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -45,7 +45,8 @@
                     <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search EnagageMedia">
                 </div>
                 <div class="four columns menu">
-                    <a href="#" class="header-menu-item user">User</a>
+                    <a href="#" class="header-menu-item header-button language"></a>
+                    <a href="#" class="header-menu-item header-button user">User</a>
                     <a href="#" class="header-menu-item">Publish</a>
                     <a href="#" class="header-menu-item">Browse</a>
                 </div>
