Added colophon with Plumi logo.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -97,15 +97,15 @@ West Papua: Land Of Mourning, Bloodshed (peace?) And Humanitarian Intervention</
                 <ul>
                     <li><a href="#">Competition: Bhinneka Tinggal Duka</a><br />Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</li>
                                     <li><a href="#">
-Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism And Online Subtitling Workshop In Singapore</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
+Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
                 </ul>
                 <div class="column-title"><h4>EngageMedia Blog</h4></div>
                 <ul>
-                    <li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
+                    <li><a href="#">Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</a><br />Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</li>
                 </ul>
                 <div class="column-title"><h4>Latest Comments</h4></div>
                 <ul>
-                    <li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
+                    <li><a href="#"> philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</a><br />Super,je suis content que j'ai servi d'inspiration.</li>
                 </ul>
             </div>
         </div>
@@ -203,11 +203,18 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
                     </li>
                     <li>Contact</li>   
                     <li>
-                        <div class="fb"></div>
-                        <div class="twitter"></div>
+                        <span class="social-title">Social Media</span>
+                        <span class="fb"></span>
+                        <span class="twitter"></span>
                     </li>                 
                 </ul>
             </div>
+        </div>
+        <div class="row footer">
+            <div class="colophon"><a href="#">
+                powered by <b>Plumi</b>
+                <span class="plumi-logo"></span>
+            </a></div>
         </div>
     </div>
     <span id="javascript_at_bottom"></span>      
