Changed featured items style.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -76,17 +76,20 @@
                             <div class="featured-image"></div>
                             <div class="featured-text">
                                 <ul>
-                                    <li><a href="http://foundation.zurb.com/docs">
+                                    <li><a href="#">
 West Papua: Land Of Mourning, Bloodshed (peace?) And Humanitarian Intervention</a><br />Reverend Benny Giay of the Kingmi Papuan Christian Church presented the following diplomat briefing which reads like an essay on human rights abuses in West Papua. </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
 
-                    <div class="four columns video">
-                        <div style="width: 430px; height: 190px;background: #111;"></div>
-                        <div class="under">
-                            <h5>Featured Filmmaker</h5>
+                    <div class="four columns">
+                        <div class="featured-filmmaker">
+                            <div class="featured-image"></div>
+                            <div class="featured-text">
+                                <h5>Featured Filmmaker: </h5>
+                                Sathis Kumar Krishnan
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -159,7 +162,7 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="column centered load-more"><a class="button" href="#">Load More</a></div>
+                <div class="column centered load-more"><a class="button large" href="#">Load More</a></div>
         </div>
     </div>
     <div class="row separate-thick"></div>
