Minor interaction changes.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -114,49 +114,49 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
         </div>
         <div class="row row-title"><h4>Latest Videos</h4></div>
         <div class="row content" id="latestvideos">
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="three columns video">
+                <div class="three columns video tablet-one">
                     <div style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
