--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -59,7 +59,11 @@
             <div class="nine columns">
                 <div class="row nest">
                     <div class="video featured" id="featuredvideo">
-                        <div style="width: 900px; height: 400px;background: #111;"></div>
+                        <div class="viewport" style="width: 900px; height: 400px;background: #111;"></div>
+                        <div class="unisub">
+                            <div class="unisub-proxy">
+                            </div>
+                        </div>
                         <div class="under">
                             <h3>Witch Hunt Online</h3>
                             <div class="video-actions">
@@ -115,49 +119,49 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
         <div class="row row-title"><h4>Latest Videos</h4></div>
         <div class="row content" id="latestvideos">
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
                 </div>
                 <div class="three columns video tablet-one">
-                    <div style="width: 230px; height: 130px;background: #111;"></div>
+                    <div class="viewport" style="width: 230px; height: 130px;background: #111;"></div>
                     <div class="under">
                         <h5>Video Title</h5>
                     </div>
