Added some sample content.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -59,7 +59,9 @@
             <div class="nine columns">
                 <div class="row nest">
                     <div class="video featured" id="featuredvideo">
-                        <div class="viewport" style="width: 900px; height: 400px;background: #111;"></div>
+                        <div class="viewport">
+                            <img class="featured-image" src="images/main.png">
+                        </div>
                         <div class="unisub">
                             <div class="unisub-proxy">
                             </div>
@@ -77,11 +79,11 @@
                 <div class="row nest">
                     <div class="eight columns">
                         <div class="featured-content">
-                            <div class="featured-image"></div>
+                            <img class="featured-image" src="images/image_mini_2.png">
                             <div class="featured-text">
                                 <ul>
                                     <li><a href="#">
-West Papua: Land Of Mourning, Bloodshed (peace?) And Humanitarian Intervention</a><br />Reverend Benny Giay of the Kingmi Papuan Christian Church presented the following diplomat briefing which reads like an essay on human rights abuses in West Papua. </li>
+World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </li>
                                 </ul>
                             </div>
                         </div>
@@ -89,7 +91,7 @@ West Papua: Land Of Mourning, Bloodshed (peace?) And Humanitarian Intervention</
 
                     <div class="four columns">
                         <div class="featured-filmmaker">
-                            <div class="featured-image"></div>
+                            <img class="featured-image" src="images/image_mini.png">
                             <div class="featured-text">
                                 <h5>Featured Filmmaker: </h5>
                                 Sathis Kumar Krishnan
