fix previous id name error

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -109,7 +109,7 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
 Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
                 </ul>
                 <div class="column-title"><h4>EngageMedia Blog</h4></div>
-                <ul id="blogrightportlet">
+                <ul id="blogsrightportlet">
                     <li><a href="#">Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</a><br />Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</li>
                 </ul>
                 <div class="column-title"><h4>Latest Comments</h4></div>
