--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -103,17 +103,17 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
 
             <div class="three columns news">
                 <div class="column-title"><h4>News & Events</h4></div>
-                <ul id="newsrightportlet">
+                <ul id="news-right-portlet">
                     <li><a href="#">Competition: Bhinneka Tinggal Duka</a><br />Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</li>
                                     <li><a href="#">
 Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
                 </ul>
                 <div class="column-title"><h4>EngageMedia Blog</h4></div>
-                <ul id="blogsrightportlet">
+                <ul id="blogs-right-portlet">
                     <li><a href="#">Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</a><br />Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</li>
                 </ul>
                 <div class="column-title"><h4>Latest Comments</h4></div>
-                <ul id="commentsrightportlet">
+                <ul id="comments-right-portlet">
                     <li><a href="#"> philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</a><br />Super,je suis content que j'ai servi d'inspiration.</li>
                 </ul>
             </div>
