--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -47,8 +47,8 @@
                 <div class="four columns menu">
                     <a href="#" class="header-menu-item header-button language"><img src="stylesheets/images/uk.png"></a>
                     <a href="#" class="header-menu-item header-button user">User</a>
-                    <a href="#" class="header-menu-item">Publish</a>
-                    <a href="#" class="header-menu-item">Browse</a>
+                    <a href="publish" class="header-menu-item">Publish</a>
+                    <a href="taxonomy" class="header-menu-item">Browse</a>
                 </div>
             </div>
         </div>
