--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -220,7 +220,7 @@ Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journ
             </div>
         </div>
         <div class="row footer">
-            <div class="colophon"><a href="#">
+            <div class="colophon"><a href="http://plumi.org">
                 powered by <b>Plumi</b>
                 <span class="plumi-logo"></span>
             </a></div>
