Added social networks links below news.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -133,7 +133,7 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
                     </ul>
                 </div>
 
-                <div class="news-section">
+                <div class="news-section social-networks">
                     <div class="fb"></div>
                     <div class="twitter"></div>
                 </div>
@@ -189,7 +189,7 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
                         <h5>Video Title</h5>
                     </div>
                 </div>
-                <div class="column centered load-more"><a class="button large" href="#">Load More</a></div>
+                <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
         </div>
     </div>
     <div class="row separate-thick"></div>
