Changed news and featured items markup.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -81,10 +81,12 @@
                         <div class="featured-content">
                             <img class="featured-image" src="images/image_mini_2.png">
                             <div class="featured-text">
-                                <ul>
-                                    <li><a href="#">
-World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. </li>
-                                </ul>
+                                <a href="#">
+                                    <h5>
+                                        World Press Freedom Day: The Ultimate Faq
+                                    </h5>
+                                    International Freedom of Expression Exchange (IFEX) answers all you need to know about the coming World Press Freedom day on May 3, one of the most important days for honouring free expression. 
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -93,8 +95,10 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
                         <div class="featured-filmmaker">
                             <img class="featured-image" src="images/image_mini.png">
                             <div class="featured-text">
-                                <h5>Featured Filmmaker: </h5>
-                                Sathis Kumar Krishnan
+                                <a href="#">
+                                    <h5>Featured Filmmaker: </h5>
+                                    Sathis Kumar Krishnan
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -108,9 +112,9 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
                         <h4>News & Events</h4>
                     </div>
                     <ul id="news-right-portlet">
-                        <li><a href="#">Competition: Bhinneka Tinggal Duka</a><br />Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</li>
-                                        <li><a href="#">
-    Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</a><br />Report on the first ever citizen journalism and online subtitling workshop in Singapore.</li>
+                        <li><a href="#"><h5>Competition: Bhinneka Tinggal Duka</h5>Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</a></li>
+                                        <li><a href="#"><h5>
+    Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</h5>Report on the first ever citizen journalism and online subtitling workshop in Singapore.</a></li>
                     </ul>
                 </div>
                 <div class="news-section shade">
@@ -119,7 +123,7 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
                         <h4>EngageMedia Blog</h4>
                     </div>
                     <ul id="blogs-right-portlet">
-                        <li><a href="#">Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</a><br />Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</li>
+                        <li><a href="#"><h5>Engagemedia Ventures Into Thailand, Sprouting Projects And Partnerships</h5> Over 2 weeks in early July, I traveled across 3 provinces in the conflict zone of Southern Thailand, and to the capital city of Bangkok.</a></li>
                     </ul>
                     </div>
                 <div class="news-section shade">
@@ -129,7 +133,7 @@ World Press Freedom Day: The Ultimate Faq</a><br />International Freedom of Expr
                         <h4>Latest Comments</h4>
                     </div>
                     <ul id="comments-right-portlet">
-                        <li><a href="#"> philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</a><br />Super,je suis content que j'ai servi d'inspiration.</li>
+                        <li><a href="#"> <h5>philippe on Trou et Construction Citerne de récupération de l'eau de Pluie en Ferrociment</h5>Super,je suis content que j'ai servi d'inspiration.</a></li>
                     </ul>
                 </div>
 
