Featured height decreased as well as news items. Updated social media.

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -113,8 +113,6 @@
                     </div>
                     <ul id="news-right-portlet">
                         <li><a href="#"><h5>Competition: Bhinneka Tinggal Duka</h5>Bhinneka Tinggal Duka? Kompetisi Video Online (in)toleransi di Indonesia ini terbuka untuk publik!</a></li>
-                                        <li><a href="#"><h5>
-    Engagemedia, Malaysiakini, Cjmy, And The Online Citizen Host First Citizen Journalism</h5>Report on the first ever citizen journalism and online subtitling workshop in Singapore.</a></li>
                     </ul>
                 </div>
                 <div class="news-section shade">
@@ -138,6 +136,7 @@
                 </div>
 
                 <div class="news-section social-networks">
+                    <span>Stay in touch!</span>
                     <a href="http://twitter.com/EngageMedia" target="_blank"><div class="twitter"></div></a>
                     <a href="http://www.facebook.com/group.php?gid=43640854087" target="_blank"><div class="fb"></div></a>
                 </div>
