added an option to display notifications at the top of the front page

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -32,6 +32,8 @@
 
 </head>
 <body>
+    <div id="top-viewlet">a
+    </div>
     <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
